k8s/02-postgres-identity.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-identity
  namespace: microshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-identity
  template:
    metadata:
      labels:
        app: postgres-identity
    spec:
      containers:
        - name: postgres-identity
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-identity-storage
              mountPath: /var/lib/postgresql/data
          # Healthcheck
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "admin", "-d", "identity_db"]
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "admin", "-d", "identity_db"]
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: postgres-identity-storage
          persistentVolumeClaim:
            claimName: postgres-identity-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-identity
  namespace: microshop
spec:
  selector:
    app: postgres-identity
  ports:
    - port: 5432
      targetPort: 5432
