k8s/07-order-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: microshop
spec:
  replicas: 3          # Scaling: 3 instances (busiest service)
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: microshop/order-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8003
          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: microshop
spec:
  selector:
    app: order-service
  ports:
    - port: 8003
      targetPort: 8003
