k8s/10-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: microshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: microshop/frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
---
# NodePort exposes nginx on the actual machine so browser can reach it
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: microshop
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      # nodePort: 30080   # access via http://<server-ip>:30080
